Opened 15 years ago

Closed 15 years ago

#3003 closed bug (fixed)

Workspaces releated crash

Reported by: kallisti5 Owned by: axeld
Priority: critical Milestone: R1/alpha1
Component: Servers/app_server Version: R1/pre-alpha1
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

Don't ask me how i found this :)

1) Create multiple workspaces (I did 32)

2) Spread applications to random workspaces

3) Change the number of workspaces to 1

4) Try to re-activate windows on the other workspaces... GDB prompt comes up.

Change History (5)

comment:1 by anevilyak, 15 years ago

Component: Applications/TrackerServers/app_server

comment:2 by axeld, 15 years ago

A stack crawl would be most helpful, as always.

comment:3 by anevilyak, 15 years ago

Seems to be:

Thread 14 (team /boot/beos/system/servers/app_server (63) thread a95:x-vnd.Be-TSKB (136)):
#0 0x0028f5f3 in WindowList::RemoveWindow ()
#1 0x0024eb48 in Desktop::ActivateWindow ()
#2 0x0025117c in Desktop::WindowAction ()
#3 0x0026c25b in ServerApp::DispatchMessage()
#4 0x00267198 in ServerApp::MessageLooper ()
#5 0x0026b7c5 in MessageLooper::_message_thread ()
#6 0x006f5610 in thread_entry () from /boot/beos/system/lib/libroot.so

Would be helpful if someone would fix the problem that gdb attaches to the main thread of the team always, took me a while to track that down because fake_app_server is quite slow, making thread apply all bt not fun at all. This is 100% reproducible by the way.

comment:4 by axeld, 15 years ago

Milestone: R1R1/alpha1
Priority: normalcritical

comment:5 by axeld, 15 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev28549.

Note: See TracTickets for help on using tickets.