* When switching to a workspace a window is on in ActivateWindow(), only   consider the workspaces in the configured count. * If the window is not on the current workspace after the workspace check,   always move it to the current instead. This lets windows on workspaces   outside of the ones currently configured show up on the current workspace   as if they had the B_NOT_ANCHORED_ON_ACTIVATE flag set. * This fixes bug #3003. * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28549 a95241bf-73f2-0310-859d-f6bbb57e9c96